src/test/deca/context/valid/instanceof.deca
class A{}
class B extends A{}

{
    B b;
    b instanceof A;
}
