src/test/deca/context/invalid/classDefinition-extendsSameClass.deca
class Sasuke extends Sasuke {}
class Madara{}
{} 
